traefik-ingress/2-traefik-deploy.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-svc
  namespace: develop
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: api
  type: NodePort

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: develop
  labels:
    app.kubernetes.io/name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik
    spec:
      serviceAccountName: traefik-ingress-sa
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:2.9
        name: traefik
        ports:
        - name: http
          containerPort: 80
        - name: api
          containerPort: 8080
        args:
        - --api=true
        - --api.dashboard=true
        - --providers.kubernetesingress=true
        - --log.level=INFO
